# repralign

./: .gitignore  README.md  README.zh-CN.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/: example_analysis.yaml  example_batch.pt  reference_alignment_template.yaml
docs/: index.md  troubleshooting.md
docs/getting-started/: concepts.md  installation.md  limitations.md
docs/guides/: cli-workflow.md  datasets.md  layer-discovery.md  outputs.md  python-api.md  reference-models.md  yaml-configs.md
docs/tutorials/: minimal-compare.md  paper-inspired-analysis.md  real-image-workflow.md
docs/zh/: index.md  troubleshooting.md
docs/zh/getting-started/: concepts.md  installation.md  limitations.md
docs/zh/guides/: cli-workflow.md  datasets.md  layer-discovery.md  outputs.md  python-api.md  reference-models.md  yaml-configs.md
docs/zh/tutorials/: minimal-compare.md  paper-inspired-analysis.md  real-image-workflow.md
examples/: __init__.py  minimal_compare.py  model_factories.py  paper_figure_analysis.py
src/repralign/: __init__.py  cache.py  cli.py  config.py  datasets.py  extract.py  factories.py  hooks.py  plotting.py  pooling.py  registry.py
src/repralign/adapters/: __init__.py  base.py  generic_torch.py  hf_vision.py  sd3_generation.py
src/repralign/metrics/: __init__.py  cka.py  cknna.py
tests/: test_cka.py  test_cknna.py  test_datasets.py  test_extract_dataset.py  test_hooks.py  test_pooling.py  test_sd3_adapter.py
