[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repralign"
version = "0.1.0"
description = "Reusable layer-wise representation alignment analysis for multimodal models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "jnmz", email = "jkw@bupt.edu.cn" }
]
keywords = ["multimodal", "representation-learning", "cka", "pytorch", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "torch>=2.1",
]

[project.optional-dependencies]
huggingface = [
  "transformers>=4.40",
]
dev = [
  "build>=1.2.1",
  "pytest>=8.0",
  "twine>=5.1.1",
]

[project.scripts]
repralign = "repralign.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
